<resources>
    <string name="app_name">My Menu</string>

    <string name="error_email_app_not_available">The email app is not available</string>
    <string name="error_phone_app_not_available">The phone is not available</string>
    <string name="error_web_app_not_available">The browser is not available</string>
    <string name="invalid_fields">Unexpected error</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_confirm_password">Your confirmation password does not match</string>
    <string name="invalid_phone">Not a valid phone</string>
    <string name="invalid_firstname">Not a valid First name. Only letters are allowed.</string>
    <string name="invalid_lastname">Not a valid Last name. Only letters are allowed.</string>
    <string name="invalid_empty">All fields are required</string>
    <string name="session_expired">Session expired. Please re-login to renew your session.</string>
    <string name="session_empty">You are not logged in. Please login and try again.</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_no_internet">Network Connection error, please try again.</string>
    <string name="forgot_pass_title">Forgot your password?</string>

    <string name="sample_price">$100</string>
    <string name="peso">$</string>

    <string name="yes">Si.</string>
    <string name="no">No.</string>
    <string name="enviar">Enviar</string>

    <string name="menu">Menú</string>
    <string name="today_menu">Menú del día</string>
    <string name="payments">Medios de pago</string>
    <string name="suggestions">Sugerencias</string>

    <string name="comment">Dejanos tu comentario o sugerencia!</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>

    <string name="starter">Entrada</string>
    <string name="main">Plato Principal</string>
    <string name="options">Opciones</string>
    <string name="dessert">Postre</string>
    <string name="coffee">Café</string>

    <string name="filtros">Filtrar por</string>
    <string name="vegetarianos">Vegetarianos</string>
    <string name="celiacos">Celíacos</string>
    <string name="ninguno">Ninguno</string>

    <string name="alert">Atención</string>
    <string name="empty_content">Debe completar todos los campos.</string>
    <string name="button_ok">OK</string>
    <string name="bad_request_email">ERROR: Introduzca una dirección de email válida</string>
    <string name="suggestion_recorded">Sugerencia enviada!</string>

</resources>
